[package]
name = "pet-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }
rodio = { version = "0.17", default-features = false, features = ["wav", "vorbis"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
